hotfix: add ScrollToTop and fix header background-color and section spacing

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   z-index: 1000;
+  background-color: var(--color-white);
 }
 
 .headerInner {
