--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -3,6 +3,7 @@
 }
 
 .section--primary {
+  padding-top: 56px;
   padding-bottom: 56px;
 }
 
